--- a/htmlCss.html
+++ b/htmlCss.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/htmlCss.css">
+    <link rel="stylesheet" href="./assets/css/htmlCss.css">
 </head>
 
 <body class="body2">
@@ -31,7 +31,7 @@
                         <img src="" alt="" width="30" height="24">
                       </a>-->
 
-                    <li class="nav-item"><a class="nav-link" href="inicio.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -98,7 +98,7 @@
                             </div>
 
                             <div class="col-lg-4">
-                                <img src="./assets/img2/htmlEtiqutas.jpg" class="img-fluid rounded " height="200"
+                                <img src="./assets/img/htmlEtiqutas.jpg" class="img-fluid rounded " height="200"
                                     width="300" alt="">
                             </div>
                         </div>
@@ -153,7 +153,7 @@
 A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar los elementos HTML:
 
                         </p>
-                        <img src="./assets/img2/div.png" alt="imagen div">
+                        <img src="./assets/img/div.png" alt="imagen div">
                         <p></p>
                         <p>El elemento más externo es una división simple (div /div) que puedes usar para marcar secciones de contenido más grandes.
                             Contiene un encabezado (h1 /h1), un subtítulo (h2 /h2), dos párrafos (p /p) y una imagen (img).
@@ -178,7 +178,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                     aria-labelledby="panelsStayOpen-heading6">
                     <div class="accordion-body">
                         <H3>La estructura de las etiquetas HTML tiene el siguiente formato:</H3>
-                        <img src="./assets/img2/etiqueta.png" alt="etiqueta">
+                        <img src="./assets/img/etiqueta.png" alt="etiqueta">
                        <br>
                        <h3>Etiqueta HTML</h3>
                        <p>
@@ -188,7 +188,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                        <p>
                         En algunas etiquetas HTML, existen algunos atributos específicos (que pueden ser opcionales u obligatorios). Los atributos determinan cierta información sobre la etiqueta (o su modo de actuar) y generalmente van asociados a un valor determinado. Este par atributo-valor se escribe después del nombre de la etiqueta, separándola por espacio y antes del carácter > de la etiqueta de apertura:
                        </p>
-                       <img src="./assets/img2/atributo.png" alt="atributo">
+                       <img src="./assets/img/atributo.png" alt="atributo">
                        <br>
                        <p>
                         En este caso, la etiqueta sería strong, el atributo id, el valor de id sería dato, mientras que el contenido de la etiqueta es Contenido. Por otro lado, y al igual que las etiquetas, cada atributo tiene una misión y comportamiento concreto. Aunque los valores pueden ir rodeados por comillas simples, se recomienda escribir el valor siempre entre comillas dobles.
@@ -220,7 +220,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                         <P>
                             En el interior de la etiqueta HTML (después de la etiqueta de apertura y antes de la etiqueta de cierre) se debe colocar la información que queremos que sea afectada por dicha etiqueta. En el siguiente ejemplo se ve como contiene un fragmento de texto:
                         </P>
-                        <img src="./assets/img2/contenidoEtiqueta.png" alt="contenidoEtiqueta">
+                        <img src="./assets/img/contenidoEtiqueta.png" alt="contenidoEtiqueta">
                         <br>
                         <p>
                             Ten en cuenta que una etiqueta puede tener varios pares atributo-valor, como se ve en el ejemplo anterior, pero nunca se debe repetir el mismo atributo en una misma etiqueta varias veces, ya que sobreescribiría al anterior. El orden de los atributos no importa. Más adelante explicaremos que tipos de atributos existen y para que sirven.
@@ -229,14 +229,14 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                         <P>
                             Los comentarios son una práctica muy común y habitual en los desarrolladores o programadores. Se basa en introducir breves fragmentos de texto que el navegador ignora y no tendrá en cuenta a la hora de crear la página visualmente, pero que a nosotros nos sirven de ayuda para documentar algún detalle, explicar algo importante o simplemente introducir algún texto que consideramos relevante:
                         </P>
-                        <img src="./assets/img2/comentario.png" alt="comentario">
+                        <img src="./assets/img/comentario.png" alt="comentario">
                         <br>
                         <br>
                         <h3>Identificador de etiqueta (id)</h3>
                         <p>
                             En HTML, podemos darle un identificador a una etiqueta HTML y de esta forma darle un nombre. Simplemente, añadimos el atributo id y colocamos el nombre como valor de ese atributo. Ese nombre de identificador no debe empezar nunca por un número y puede contener letras mayúsculas, minúsculas, signos especiales (guión, guión bajo...) o números:
                         </p>
-                        <img src="./assets/img2/id.png" alt="imagen id">
+                        <img src="./assets/img/id.png" alt="imagen id">
                         <br>
                         <p>Los id se suelen indicar cuando queremos localizar zonas específicas que sabemos que no se van a repetir en esa misma página.</p>
                         <h3>Clases de etiquetas (class)</h3>
@@ -246,7 +246,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                                 De hecho, la idea de las clases es establecer géneros o tipos de etiquetas, a los que les asociemos características comunes. Sigamos con el ejemplo anterior:
 
                         </p>
-                        <img src="./assets/img2/clase.png" alt="clase">
+                        <img src="./assets/img/clase.png" alt="clase">
                         <br>
                         <p>
                             Obsérvese que, al tener la misma clase «anuncio», podemos realizar acciones para todas las etiquetas de ese tipo y no tener que hacerlo para cada una de ellas por separado. Un ejemplo clásico donde se ve bien su utilidad, es respecto a utilizar ids y clases para dar estilo CSS, donde aplicaremos unos estilos concretos a todas las etiquetas HTML con clase «anuncio».
@@ -300,7 +300,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                             </div>
 
                             <div class="col-lg-4">
-                                <img src="./assets/img2/propiedaCss.jpeg" class="img-fluid rounded " height="200"
+                                <img src="./assets/img/propiedaCss.jpeg" class="img-fluid rounded " height="200"
                                     width="300" alt="">
                             </div>
                         </div>
@@ -380,14 +380,14 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                             En principio, tenemos tres formas diferentes de hacerlo, siendo la primera la más común y la última la menos habitual:
 
                         </p>
-                        <img src="./assets/img2/css1.png" alt="imagen css1">
+                        <img src="./assets/img/css1.png" alt="imagen css1">
                         <br>
                         
                         <h3>Enlace a CSS externo (link) </h3>
                         <p>
                             En la cabecera de nuestro documento HTML, más concretamente en el bloque <head></head>, podemos incluir una etiqueta <link> con la que establecemos una relación entre el documento actual y el archivo CSS que indicamos en el atributo href:
                         </p>
-                        <img src="./assets/img2/css2.png" alt="imagen css2">
+                        <img src="./assets/img/css2.png" alt="imagen css2">
                         <br>
                         <p>
                             De esta forma, los navegadores sabrán que deben aplicar los estilos que se encuentren en el archivo index.css. Se aconseja escribir esta línea lo antes posible (sobre todo, antes de los scripts), obligando así al navegador a aplicar los estilos cuanto antes y eliminar la falsa percepción visual de que la página está en blanco y no ha sido cargada por completo.
@@ -396,7 +396,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                         <p>
                             Otra de las formas habituales que existen para incluir estilos CSS en nuestra página es la de añadirlos directamente en el documento HTML, a través de una etiqueta style que contendrá el código CSS:
                         </p>
-                        <img src="./assets/img2/css3.png" alt="imagen css3">
+                        <img src="./assets/img/css3.png" alt="imagen css3">
                         <br>
                         <p>
                             Este sistema puede servirnos en ciertos casos particulares, pero hay que darle prioridad al método anterior (CSS externo), ya que incluyendo el código CSS en el interior del archivo HTML arruinamos la posibilidad de tener el código CSS en un documento a parte, pudiendo reutilizarlo y enlazarlo desde otros documentos HTML mediante la etiqueta link.
@@ -406,7 +406,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                         <p>
                             Por último, la tercera forma de aplicar estilos en un documento HTML es hacerlo directamente, a través del atributo style de la propia etiqueta donde queramos aplicar el estilo, colocando ahí las propiedades CSS:
                         </p>
-                        <img src="./assets/img2/css4.png" alt="imagen css4">
+                        <img src="./assets/img/css4.png" alt="imagen css4">
                         <br>
                         <p>
                             De la misma forma que en el método anterior, con la etiqueta style, se recomienda no utilizar este método salvo en casos muy específicos y justificados, ya que los estilos se asocian a la etiqueta HTML en cuestión y no pueden reutilizarse.
@@ -432,7 +432,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                         <P>
                             La estructura CSS se basa en reglas que tienen el siguiente formato:
                         </P>
-                        <img src="./assets/img2/css5.png" alt="imagen css5">
+                        <img src="./assets/img/css5.png" alt="imagen css5">
                         <br>
                         <ol>• <strong>Selector: </strong> El selector es el elemento HTML que vamos a seleccionar del documento para aplicarle un estilo concreto. Por ejemplo, con p seleccionaríamos todas las etiquetas <p> del HTML. Más adelante veremos que esto puede ser mucho más complejo, y dedicaremos una serie de capítulos exclusivamente a este tema. </ol>
                         <ol>• <strong>Propiedad: </strong> La propiedad es una de las diferentes características que brinda el lenguaje CSS y que aplicaremos al selector para darle estilo.</ol>
@@ -440,7 +440,7 @@ A continuación, puedes ver un ejemplo de código de cómo se pueden estructurar
                         <p>
                             Con todo esto le iremos indicamos al navegador que, para cada etiqueta (selector especificado) debe aplicar las reglas (propiedad y valor) indicadas.
                         </p>
-                        <img src="./assets/img2/css6.png" alt="imagen css6">
+                        <img src="./assets/img/css6.png" alt="imagen css6">
                         <br>
                         <p>
                             En este caso, estamos seleccionando todas las etiquetas <p> del documento HTML (en este ejemplo es una sola, pero si existieran más se aplicaría a todas), y les aplicaremos el estilo indicado: color de texto blue.
