--- a/bootstrap.html
+++ b/bootstrap.html
@@ -31,7 +31,7 @@
                         <img src="" alt="" width="30" height="24">
                       </a>-->
 
-                    <li class="nav-item"><a class="nav-link" href="inicio.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
