--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="inicio.css">
+    <link rel="stylesheet" href="./assets/css/inicio.css">
     <title>HELPROGRAM</title>
 </head>
 <body>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="inicio.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="htmlCss.html">HTML-CSS</a>
@@ -58,37 +58,37 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img1/html-css.jpg" class="d-block w-100" alt="error">
+            <img src="./assets/img/html-css.jpg" class="d-block w-100" alt="error">
             <div class="carousel-caption d-none d-md-block">
               <h5><strong>HTML Y CSS</strong></h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img1/logica.jpg" class="d-block w-100" alt="error">
+            <img src="./assets/img/logica.jpg" class="d-block w-100" alt="error">
             <div class="carousel-caption d-none d-md-block">
               <h5><strong>Logica y algoritmia</strong></h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img1/js.jpg" class="d-block w-100" alt="error">
+            <img src="./assets/img/js.jpg" class="d-block w-100" alt="error">
             <div class="carousel-caption d-none d-md-block">
               <h5><strong>JavaScript</strong></h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img1/bootstrap.png" class="d-block w-100" alt="error">
+            <img src="./assets/img/bootstrap.png" class="d-block w-100" alt="error">
             <div class="carousel-caption d-none d-md-block">
                 <h5><strong>Bootstrap</strong></h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img1/repositorio.png" class="d-block w-100" alt="error">
+            <img src="./assets/img/repositorio.png" class="d-block w-100" alt="error">
             <div class="carousel-caption d-none d-md-block">
                 <h5><strong>Repositorios</strong></h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img1/scrum.jpg" class="d-block w-100" alt="error">
+            <img src="./assets/img/scrum1.jpg" class="d-block w-100" alt="error">
             <div class="carousel-caption d-none d-md-block">
                 <h5><strong>Scrum</strong></h5>
             </div>
