--- a/scrum.html
+++ b/scrum.html
@@ -324,8 +324,28 @@
 
 
     </div>
+    <br>
+    
+    <div class="container bg-light text-center rounded-1" data-aos="fade-down">
+        <br>
+        <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+        <br>
+        <button id="cuestionario" class="btn" style="background-color: rgb(7, 209, 245);">Dar clic al cuestionario</button><br><br>
+    </div>
+
+        <br>
+
+    <footer class="footer bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        </div>
+
+    </footer>
+
+
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/scrum.js"></script>
     <script>
         AOS.init();
     </script>
