subida de archivos

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -351,8 +351,7 @@
         <br>
 
         <div id="pantallaBootstrap" class=""></div>
-        
-        <input type="button" value="Clic aqui para iniciar" class="btn btn-info" id="bootstraptest">
+        <a href="./formBootstrap.html" class="btn btn-info">Clic aqui para iniciar</a>
         <br>
         <br>
     </div>
