--- a/repositorios.html
+++ b/repositorios.html
@@ -60,15 +60,16 @@
         </h1>
     </div>
     <br>
-    <div class="container bg-light  rounded-1" data-aos="fade-down">
+    <div class="container bg-light text-center rounded-1" data-aos="fade-down">
         <br>
         <br>
         <h2 class="display-5"><strong>Acerca de este Curso</strong></h2>
-        <br>
-        <p>En es este curso aprenderás diferentes aplicaciones para alojar proyectos y los comandos básicos para
-            desenvolverte en estas aplicaciones.</p>
         <hr>
+        <ol>Bienvenido al curso de <strong>Scrum</strong> en este curso aprenderá sobre la metodología ágil Scrum y sus
+            componentes</ol>
+        <br>
     </div>
+<br>
     <div class="container bg-light  rounded-1" data-aos="fade-down">
         <h2 class="display-5"><strong>Contenido del Curso</strong></h2>
         <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -95,28 +96,28 @@
                                 </p>
 
 
-
                             </div>
 
                             <div class="col-lg-4">
                                 <img src="./assets/img/1280px-Git-logo.svg.png" class="img-fluid rounded " height="200"
-                                    width="300" alt="">
+                                    width="300" alt="repositorio">
                             </div>
                         </div>
 
                     </div>
                 </div>
             </div>
+
             <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree1">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseTwo">
+                        data-bs-target="#panelsStayOpen-collapseThree1" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseThree1">
                         ¿Qué es Git?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-headingTwo">
+                <div id="panelsStayOpen-collapseThree1" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingThree1">
                     <div class="accordion-body">
                         <p><strong>Git</strong> es un software que permite el manejo de control de versiones de nuestro
                             código.
@@ -135,9 +136,9 @@
                         </p>
 
 
-                        </p>
                     </div>
                 </div>
+
             </div>
 
             <div class="accordion-item">
@@ -176,18 +177,19 @@
 
                     </div>
                 </div>
+
             </div>
 
             <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-heading6">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree2">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapse6" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapse6">
+                        data-bs-target="#panelsStayOpen-collapseThree2" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseThree2">
                         ¿Qué es GitHub?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapse6" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-heading6">
+                <div id="panelsStayOpen-collapseThree2" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingThree2">
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-lg-8">
@@ -206,39 +208,27 @@
                             <div class="col-lg-4 ">
 
                                 <img src="./assets/img/GitHub-Logo.png" class="img-fluid rounded " height="40"
-                                    width="160" alt="" style="position: absolute;">
+                                    width="160" alt="repositorio" style="position: absolute;">
 
                             </div>
-                        </div><br> <br>
-
-
-
-
-                        <div class="col-lg-12" style="margin: 0% auto; width: 700px; ">
-
-                            <iframe width="500" height="315" src="https://www.youtube.com/embed/DinilgacaWs"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-
                         </div>
+
+
                     </div>
                 </div>
+
             </div>
 
-
-
-
             <div class="accordion-item">
-                <h2 class=" h2 accordion-header" id="panelsStayOpen-heading7">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree3">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapse7" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapse7">
+                        data-bs-target="#panelsStayOpen-collapseThree3" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseThree3">
                         ¿Qué es Bitbucket ?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapse7" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-heading7">
+                <div id="panelsStayOpen-collapseThree3" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingThree3">
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-lg-8">
@@ -276,30 +266,29 @@
                             <div class="col-lg-4 ">
 
                                 <img src="./assets/img/bitbucket-logo.png" class="img-fluid rounded " height="150"
-                                    width="260" alt="" style="position: absolute;">
+                                    width="260" alt="repositorio" style="position: absolute;">
 
                             </div>
-                        </div><br> <br>
+                        </div>
 
                     </div>
                 </div>
+
             </div>
 
-
             <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-heading4">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree4">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapse4" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapse4">
+                        data-bs-target="#panelsStayOpen-collapseThree4" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseThree4">
                         ¿Qué es Git lab?
                     </button>
-                </h2>
-                <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-heading4">
+                </h4>
+                <div id="panelsStayOpen-collapseThree4" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingThree4">
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-lg-8">
-
                                 <p>
                                     <strong>GitLab</strong> es una herramienta de ciclo de vida y repositorio de
                                     <STrong>Git</STrong>. Es un completo
@@ -314,38 +303,52 @@
 
                             <div class="col-lg-4 ">
 
+                               
                                 <img src="./assets/img/GitLab.png" class="img-fluid rounded " height="40" width="160"
-                                    alt="" style="position: absolute;">
+                                    alt="repositorio">
 
                             </div>
                         </div>
+
+
                     </div>
                 </div>
-            </div>
 
+            </div>
 
         </div>
         <br>
+
     </div>
 
+
+
+
+
+    </div>
     <br>
+
     <div class="container bg-light text-center rounded-1" data-aos="fade-down">
         <br>
         <h2 class="display-5"><strong>Cuestionario final</strong></h2>
         <br>
-        <button id="cuestionario" class="btn" style="background-color: coral;">Dar clic al cuestionario</button><br><br>
+        <button id="cuestionario" class="btn btn-warning">Dar clic al
+            cuestionario</button><br><br>
     </div>
 
+    <br>
 
-    <footer class="footer1 footer bg-black small text-center text-white-50">
+    <footer class="footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
         </div>
+
     </footer>
+
 
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/repo.js"></script>
+    <script src="./assets/js/scrum.js"></script>
     <script>
         AOS.init();
     </script>
