--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul class="nav justify-content-center" style="
     padding-bottom: 2%;
     padding-top: 2%;">
+        <img src="assets/img/Helprogram1.png" alt="logo" class="logo">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
@@ -258,7 +259,8 @@
         </div>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page">&copy; 2021 Bichotas</a>
+          <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+          </div>
         </li>
       </ul>
 
