correción del form B

--- a/formBootstrap.html
+++ b/formBootstrap.html
@@ -81,9 +81,10 @@
                 </div>
                 <div class="error" id="p4Err"></div>
             </div>
+            <br>
 
             <div class="card">
-                <p><strong>Cuarta pregunta</strong>, ¿Bootstrap es un framework front-end utilizado para desarrollar
+                <p><strong>Quinta pregunta</strong>, ¿Bootstrap es un framework front-end utilizado para desarrollar
                     aplicaciones
                     web? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
@@ -92,6 +93,7 @@
                 </div>
                 <div class="error" id="p5Err"></div>
             </div>
+            <br>
 
 
             <input class="btn btn-dark" type="submit" id="submit" style="width: 100%;" value="ENVIAR">
