--- a/formBootstrap.html
+++ b/formBootstrap.html
@@ -84,15 +84,14 @@
             <br>
 
             <div class="card">
-                <p><strong>Quinta pregunta</strong>, ¿Bootstrap es un framework front-end utilizado para desarrollar
-                    aplicaciones
-                    web? verdadero(v) o falso(f)</p>
+                <p><strong>Quinta pregunta</strong>, ¿Se puede descargar el framework es a través de los administradores de paquetes? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p5" value="v"> Verdadero</p>
                     <p><input type="radio" name="p5" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p5Err"></div>
             </div>
+            <br>
             <br>
 
 
