subida de form b

--- a/formBootstrap.html
+++ b/formBootstrap.html
@@ -72,9 +72,7 @@
             </div>
             <br>
             <div class="card">
-                <p><strong>Cuarta pregunta</strong>, ¿Bootstrap es un framework front-end utilizado para desarrollar
-                    aplicaciones
-                    web? verdadero(v) o falso(f)</p>
+                <p><strong>Cuarta pregunta</strong>, ¿Hay diferentes formas de descargar este framework. Una de ellas es descargando la versión compilada de los códigos CSS y JavaScript? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p4" value="v"> Verdadero</p>
                     <p><input type="radio" name="p4" value="f"> Falso</p>
