--- a/htmlCss.html
+++ b/htmlCss.html
@@ -588,9 +588,14 @@
     <br>
     <div class="container bg-light text-center rounded-1" data-aos="fade-down">
         <br>
+        
         <h2 class="display-5"><strong>Cuestionario final</strong></h2>
         <br>
-        <button id="cuestionario" class="btn btn-info">Dar clic al cuestionario</button><br><br>
+
+        <div id="pantallaBootstrap" class=""></div>
+        <a href="./formHtmlCss.html" class="btn btn-info">Clic aqui para iniciar</a>
+        <br>
+        <br>
     </div>
 
     <footer class="footer bg-black small text-center text-white-50">
