--- a/formHtmlCss.html
+++ b/formHtmlCss.html
@@ -34,10 +34,11 @@
                 <input class="form-control" type="text" name="nombre" maxlength="100">
                 <div class="error" id="nombreErr"></div>
             </div>
-            
+
             <br>
             <div class="card">
-                <p><strong>Primera pregunta</strong>, ¿Una página con extensión htm o html comienza por html (entre signos mayor y menor)? verdadero(v) o falso(f)</p>
+                <p><strong>Primera pregunta</strong>, ¿Una página con extensión htm o html comienza por html (entre
+                    signos mayor y menor)? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p1" value="v"> Verdadero</p>
                     <p><input type="radio" name="p1" value="f"> Falso</p>
@@ -47,7 +48,8 @@
             <br>
 
             <div class="card">
-                <p><strong>Segunda pregunta</strong>, ¿Para insertar una fila en una tabla usamos td (entre signos menor y mayor)?
+                <p><strong>Segunda pregunta</strong>, ¿Para insertar una fila en una tabla usamos td (entre signos menor
+                    y mayor)?
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p2" value="v"> Verdadero</p>
@@ -69,68 +71,77 @@
             </div>
             <br>
             <div class="card">
-                <p><strong>Cuarta pregunta</strong>, ¿Para crear una celda de una tabla se usa (td)? verdadero(v) o falso(f)</p>
+                <p><strong>Cuarta pregunta</strong>, ¿Para crear una celda de una tabla se usa (td)? verdadero(v) o
+                    falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p4" value="v"> Verdadero</p>
                     <p><input type="radio" name="p4" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p4Err"></div>
             </div>
-
+            <br>
             <div class="card">
-                <p><strong>Quinta pregunta</strong>, ¿Para comenzar un formulario usamos formulary (entre signos mayor y menor)? verdadero(v) o falso(f)</p>
+                <p><strong>Quinta pregunta</strong>, ¿Para comenzar un formulario usamos formulary (entre signos mayor y
+                    menor)? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p5" value="v"> Verdadero</p>
                     <p><input type="radio" name="p5" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p5Err"></div>
             </div>
-
+            <br>
             <div class="card">
-                <p><strong>Sexta pregunta</strong>, ¿CSS controla el aspecto gráfico de una página web mediante hojas de estilo indicando al navegador como se deben visualizar los elementos de un documento HTML? verdadero(v) o falso(f)</p>
+                <p><strong>Sexta pregunta</strong>, ¿CSS controla el aspecto gráfico de una página web mediante hojas de
+                    estilo indicando al navegador como se deben visualizar los elementos de un documento HTML?
+                    verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p6" value="v"> Verdadero</p>
                     <p><input type="radio" name="p6" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p6Err"></div>
             </div>
-
+            <br>
             <div class="card">
-                <p><strong>Septima pregunta</strong>, ¿Los navegadores ( Firefox, Chrome, Safari, etc) establecen valores CSS por defecto a las etiquetas HTML.? verdadero(v) o falso(f)</p>
+                <p><strong>Septima pregunta</strong>, ¿Los navegadores ( Firefox, Chrome, Safari, etc) establecen
+                    valores CSS por defecto a las etiquetas HTML.? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p7" value="v"> Verdadero</p>
                     <p><input type="radio" name="p7" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p7Err"></div>
             </div>
-
+            <br>
             <div class="card">
-                <p><strong>Octava pregunta</strong>, ¿La etiqueta (style) se escribe dentro del (body)? verdadero(v) o falso(f)</p>
+                <p><strong>Octava pregunta</strong>, ¿La etiqueta (style) se escribe dentro del (body)? verdadero(v) o
+                    falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p8" value="v"> Verdadero</p>
                     <p><input type="radio" name="p8" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p8Err"></div>
             </div>
-
+            <br>
             <div class="card">
-                <p><strong>Novena pregunta</strong>, ¿Para mantener el CSS separado del HTML ( es decir en otro archivo), se utiliza el elemento (link) en la cabecera.? verdadero(v) o falso(f)</p>
+                <p><strong>Novena pregunta</strong>, ¿Para mantener el CSS separado del HTML ( es decir en otro
+                    archivo), se utiliza el elemento (link) en la cabecera.? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p9" value="v"> Verdadero</p>
                     <p><input type="radio" name="p9" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p9Err"></div>
             </div>
-
+            <br>
             <div class="card">
-                <p><strong>Decima pregunta</strong>, ¿box-sizing nos permite establecer la forma en que se calculará el ancho y alto total de un elemento.? verdadero(v) o falso(f)</p>
+                <p><strong>Decima pregunta</strong>, ¿box-sizing nos permite establecer la forma en que se calculará el
+                    ancho y alto total de un elemento.? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p10" value="v"> Verdadero</p>
                     <p><input type="radio" name="p10" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p10Err"></div>
             </div>
-
+            <br>
+            <br>
 
 
             <input class="btn btn-dark" type="submit" id="submit" style="width: 100%;" value="ENVIAR">
