--- a/logica.html
+++ b/logica.html
@@ -216,7 +216,7 @@
     <br>
     <h2 class="display-5"><strong>Cuestionario final</strong></h2>
     <br>
-    <button id="cuestionario" class="btn btn-dark">Iniciar cuestionario</button><br><br>
+    <a href="./formLogica.html" class="btn btn-dark">Clic aqui para iniciar</a><br><br>
 </div>
 
 
