--- a/repositorios.html
+++ b/repositorios.html
@@ -336,7 +336,7 @@
         <br>
 
         <div id="pantallaBootstrap" class=""></div>
-        <a href="./formRepositorios.html" class="btn btn-info">Clic aqui para iniciar</a>
+        <a href="./formRepositorios.html" class="btn btn-dark">Clic aqui para iniciar</a>
         <br>
         <br>
     </div>
